workspace = { members = [], exclude = ["dudect", "ct_cm4"] }

[package]
name = "fips203"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 203 (draft): Module-Lattice-Based Key-Encapsulation Mechanism"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
documentation = "https://docs.rs/fips203"
categories = ["cryptography", "no-std"]
repository = "https://github.com/integritychain/fips203"
keywords = ["FIPS", "203", "lattice", "kem", "ml"]
rust-version = "1.70"


[dependencies]
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.2", default-features = false }


[features]
default = ["default-rng", "ml-kem-512", "ml-kem-768", "ml-kem-1024"]
default-rng = ["rand_core/getrandom"]
ml-kem-512 = []
ml-kem-768 = []
ml-kem-1024 = []


[dev-dependencies]
rand = "0.8.5"
regex = "1.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
criterion = "0.4" # Needed for MSRV 1.70; ideally 0.5.1
flate2 = "1.0.27"


[[bench]]
name = "benchmark"
harness = false


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
