workspace = { members = ['ffi'], exclude = ["ct_cm4", "dudect", "fuzz", "wasm"] }

[package]
name = "fips203"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 203 (draft): Module-Lattice-Based Key-Encapsulation Mechanism"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
documentation = "https://docs.rs/fips203"
categories = ["cryptography", "no-std"]
repository = "https://github.com/integritychain/fips203"
keywords = ["FIPS", "FIPS203", "lattice", "key", "encapsulation"]
rust-version = "1.70"  # Requires several very slightly dated dependencies


[features]
default = ["default-rng", "ml-kem-512", "ml-kem-768", "ml-kem-1024"]
default-rng = ["rand_core/getrandom"]
ml-kem-512 = []
ml-kem-768 = []
ml-kem-1024 = []


[dependencies]  # Some are marginally outdated to retain MSRV 1.70
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.2", default-features = false }


[dev-dependencies]  # Some are marginally outdated to retain MSRV 1.70
rand = "0.8.5"
regex = "1.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
criterion = "0.4.0"
flate2 = "1.0.28"


[[bench]]
name = "benchmark"
harness = false


[profile.dev]
debug = true
lto = true
opt-level = 3
codegen-units = 1


[profile.release]
lto = true
opt-level = "s"
codegen-units = 1


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
