workspace = { members = ['ffi'], exclude = ["ct_cm4", "dudect", "fuzz", "wasm"] }

[package]
name = "fips203"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 203: Module-Lattice-Based Key-Encapsulation Mechanism"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
documentation = "https://docs.rs/fips203"
categories = ["cryptography", "no-std"]
repository = "https://github.com/integritychain/fips203"
keywords = ["kem", "FIPS203", "lattice", "kyber", "encapsulation"]
# MSRV set at 1.70 for debian testing, e.g. https://packages.debian.org/search?keywords=rustc
# This requires several marginally outdated dependencies, see below


[features]
default = ["default-rng", "ml-kem-512", "ml-kem-768", "ml-kem-1024"]
default-rng = ["rand_core/getrandom"]
ml-kem-512 = []
ml-kem-768 = []
ml-kem-1024 = []


[dependencies]  # Some are marginally outdated to retain MSRV 1.70
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.2", default-features = false }
subtle = { version = "2.5.0", default-features = false, features = ['const-generics'] }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }


[dev-dependencies]  # Some are marginally outdated to retain MSRV 1.70
criterion = "0.4.0"
flate2 = "1.0.27"
hex = "0.4.3"
hex-literal = "0.4.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.2"
serde_json = {version = "1.0.127", features = []}


[[bench]]
name = "benchmark"
harness = false
required-features = ["ml-kem-512","ml-kem-768","ml-kem-1024","default-rng"]


[profile.dev]
debug = true


[profile.release]
lto = true
opt-level = "s"
codegen-units = 1


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
