[package]
name = "fips203-dudect"
version = "0.1.3"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
fips203 = { path = ".." }
rand_core = { version = "0.6.4", default-features = false }
dudect-bencher = "0.6"


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
