[package]
name = "fips203-ffi"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "C shared library exposing FIPS 203: Module-Lattice-Based Key-Encapsulation Mechanism"
authors = ["Daniel Kahn Gillmor <dkg@fifthhorseman.net>"]
documentation = "https://docs.rs/fips203"
categories = ["cryptography"]
repository = "https://github.com/integritychain/fips203"
keywords = ["FIPS", "FIPS203", "lattice", "kem", "ml"]
rust-version = "1.70"

[lib]
crate-type = ["staticlib", "cdylib"]
bench = false
name = "fips203"

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dependencies.fips203]
path = ".."
version = "0.4.0"
