[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fips203"
dynamic = ["version"]
description = "ML-KEM (FIPS203) -- asymmetric, quantum-secure encryption (Initial Public Draft)"
authors = [{name = "Daniel Kahn Gillmor", email = "dkg@fifthhorseman.net"}]
keywords = [
 "cryptography",
 "encryption",
 "FIPS",
 "FIPS203",
 "KEM",
 "lattice",
 "module-lattice",
 "post-quantum",
]
# README.md duplicates the module docstring.
# I do not know how to keep them automatically in sync
readme = "README.md"
# only dependencies are having the libfips203 shared object available
# everything else is from the stdlib
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Telecommunications Industry",
  "Intended Audience :: Information Technology",
  "Topic :: Security :: Cryptography",
  "License :: OSI Approved :: MIT License",
  # Apache 2.0 license is not in the list of known classifiers
  # So the dual licensing of this module is not adequately represented
  #  "License :: OSI Approved :: Apache 2.0 License",
  "License :: DFSG approved",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/integritychain/fips203/tree/main/ffi/python"
Repository = "https://github.com/integritychain/fips203.git"
Issues = "https://github.com/integritychain/fips203/issues"

[tool.setuptools.dynamic]
version = {attr = "fips203.__version__"}
